fix: [UIP-6336] multivalues icons alignment fix enduser
## Describe your changes
- margin for success icon in Multivalues needed adjustment to align with error icon

## Any testing tips

## Checklist before requesting a review
- [x] I have performed a self-review of my code
- [x] I have added tests for any new or fixed functionality to prevent regressions
- [x] I have added clarifying code comments to blocks which other devs may have questions on

Closes UIP-6336

--- a/packages/end-user/src/css/components/_multivalues.scss
+++ b/packages/end-user/src/css/components/_multivalues.scss
@@ -103,7 +103,7 @@
         }
     }
     
-    &__icon ~ &__icon::before {
+    &__icon + &__icon::before {
         margin-right: $spacing-lg;
     }
 }
